@@ -8,8 +8,10 @@
     <packaging>pom</packaging>
 
     <properties>
-        <gwt.version>2.8.0-SNAPSHOT</gwt.version>
+        <gwt.version>2.7.0</gwt.version>
         <gwtp.version>1.5-SNAPSHOT</gwtp.version>
+        <gsss.version>1.1-SNAPSHOT</gsss.version>
+        <gwtquery.version>1.4.3</gwtquery.version>
 
         <guava.version>18.0</guava.version>
         <guice.version>3.0</guice.version>
@@ -19,11 +21,9 @@
         <servlet-api.version>2.5</servlet-api.version>
 
         <maven-compiler-plugin.version>3.2</maven-compiler-plugin.version>
-        <gwt-maven-plugin.version>2.7.0</gwt-maven-plugin.version>
 
+        <java.version>1.7</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
-        <maven-war-plugin.version>2.6</maven-war-plugin.version>
     </properties>
 
     <modules>
@@ -32,61 +32,85 @@
         <module>app</module>
     </modules>
 
+    <repositories>
+        <repository>
+            <id>Sonatype Snapshots</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+        </repository>
+    </repositories>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>com.google.gwt</groupId>
                 <artifactId>gwt-user</artifactId>
                 <version>${gwt.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.google.gwt</groupId>
-                <artifactId>gwt-servlet</artifactId>
-                <version>${gwt.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.google.gwt</groupId>
-                <artifactId>gwt-dev</artifactId>
-                <version>${gwt.version}</version>
+                <scope>compile</scope>
             </dependency>
 
             <dependency>
                 <groupId>com.gwtplatform</groupId>
                 <artifactId>gwtp-mvp-client</artifactId>
                 <version>${gwtp.version}</version>
+                <scope>compile</scope>
             </dependency>
             <dependency>
                 <groupId>com.gwtplatform.extensions</groupId>
                 <artifactId>dispatch-rest-delegates</artifactId>
                 <version>${gwtp.version}</version>
+                <scope>compile</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>com.arcbees.gss</groupId>
+                <artifactId>gsss</artifactId>
+                <version>${gsss.version}</version>
+                <scope>compile</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.googlecode.gwtquery</groupId>
+                <artifactId>gwtquery</artifactId>
+                <version>${gwtquery.version}</version>
+                <scope>compile</scope>
             </dependency>
 
             <dependency>
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
                 <version>${guava.version}</version>
+                <scope>compile</scope>
             </dependency>
             <dependency>
                 <groupId>com.google.inject</groupId>
                 <artifactId>guice</artifactId>
                 <version>${guice.version}</version>
+                <scope>compile</scope>
             </dependency>
             <dependency>
                 <groupId>com.google.inject.extensions</groupId>
                 <artifactId>guice-servlet</artifactId>
                 <version>${guice.version}</version>
+                <scope>compile</scope>
             </dependency>
 
             <dependency>
                 <groupId>org.apache.velocity</groupId>
                 <artifactId>velocity</artifactId>
                 <version>${velocity.version}</version>
+                <scope>compile</scope>
             </dependency>
 
             <dependency>
                 <groupId>javax.inject</groupId>
                 <artifactId>javax.inject</artifactId>
                 <version>${javax.inject.version}</version>
+                <scope>compile</scope>
             </dependency>
             <dependency>
                 <groupId>javax.servlet</groupId>
@@ -114,56 +138,9 @@
 
                     <configuration>
                         <encoding>${project.build.sourceEncoding}</encoding>
+                        <source>${java.version}</source>
+                        <target>${java.version}</target>
                     </configuration>
-                </plugin>
-
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-war-plugin</artifactId>
-                    <version>${maven-war-plugin.version}</version>
-
-                    <executions>
-                        <execution>
-                            <phase>compile</phase>
-                            <goals>
-                                <goal>exploded</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-
-                    <configuration>
-                        <webappDirectory>${webappDirectory}</webappDirectory>
-                    </configuration>
-                </plugin>
-
-                <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>gwt-maven-plugin</artifactId>
-                    <version>${gwt-maven-plugin.version}</version>
-
-                    <configuration>
-                        <extraJvmArgs>-Xss1024K -Xmx1024M -XX:MaxPermSize=512M -Duser.language=en -Duser.country=US
-                        </extraJvmArgs>
-                        <logLevel>INFO</logLevel>
-
-                        <copyWebapp>true</copyWebapp>
-                        <hostedWebapp>${webappDirectory}</hostedWebapp>
-
-                        <extraParam>true</extraParam>
-                        <extra>extras</extra>
-                        <optimizationLevel>9</optimizationLevel>
-                        <deploy>${project.build.directory}/gwtDeploy</deploy>
-                    </configuration>
-
-                    <executions>
-                        <execution>
-                            <goals>
-                                <goal>resources</goal>
-                                <goal>compile</goal>
-                                <goal>test</goal>
-                            </goals>
-                        </execution>
-                    </executions>
                 </plugin>
             </plugins>
         </pluginManagement>
